<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/gesture_bg">

    <TextView
        android:id="@+id/gesture_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/text_skip"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color_50ffffff"/>

    <LinearLayout
        android:id="@+id/lock_indicator_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_75"
        android:orientation="vertical">
        <android.improving.utils.views.gesturelock.LockIndicator
            android:id="@+id/gesture_set_lock_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/gesture_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            android:layout_marginTop="@dimen/dp_23"
            android:text="@string/text_gesture_tips"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gesture_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/lock_indicator_ll"/>

    <TextView
        android:id="@+id/gesture_again_draw"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="@dimen/dp_30"
        android:text="@string/text_again_draw"
        android:textSize="@dimen/sp_15"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/color_50ffffff"/>

</RelativeLayout>