<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ufreedom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@mipmap/login_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/register_top_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_121"
                android:src="@mipmap/login_logo"/>

            <LinearLayout
                android:id="@+id/register_input_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_317"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/register_input_account_logo"
                        android:layout_width="@dimen/dp_44"
                        android:layout_height="@dimen/dp_44"
                        android:src="@mipmap/icon_phone_unsel"
                        android:scaleType="center"
                        android:background="@drawable/login_input_logo_top"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_44"
                        android:background="@drawable/login_input_top">
                        <android.improving.utils.views.CommonEditView
                            android:id="@+id/register_input_account"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_10"
                            android:background="@color/color_00000000"
                            ufreedom:hint="@string/edit_login_input_account_hint"
                            ufreedom:myTextHintColor="@color/color_50ffffff"
                            ufreedom:myTextSize="16"
                            ufreedom:myTextColor="@color/white"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/register_input_password_logo"
                        android:layout_width="@dimen/dp_44"
                        android:layout_height="@dimen/dp_44"
                        android:src="@mipmap/icon_checkcode_unsel"
                        android:scaleType="center"
                        android:background="@drawable/login_input_logo_bottom"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_44"
                        android:background="@drawable/login_input_bottom">

                        <android.improving.utils.views.circleprogressbutton.CircularCountDownButton
                            android:id="@+id/register_count_down"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                        <View
                            android:id="@+id/register_password_division"
                            android:layout_toLeftOf="@+id/register_count_down"
                            android:layout_width="@dimen/dp_1"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginBottom="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:background="@color/color_50ffffff"/>

                        <android.improving.utils.views.CommonEditView
                            android:layout_toLeftOf="@+id/register_password_division"
                            android:id="@+id/register_input_vcode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/dp_10"
                            android:gravity="center_vertical"
                            ufreedom:hint="@string/edit_login_input_vcode_hint"
                            ufreedom:myTextHintColor="@color/color_50ffffff"
                            ufreedom:myTextSize="16"
                            ufreedom:myTextColor="@color/white"/>
                    </RelativeLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/register_btn"
                    android:layout_marginTop="@dimen/dp_10"
                    style="@style/BigButtonStyle"
                    android:enabled="false"
                    android:text="@string/button_register"/>
            </LinearLayout>

            <TextView
                android:id="@+id/register_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_477"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dp_32"
                android:drawablePadding="@dimen/dp_5"
                android:drawableLeft="@mipmap/icon_agreement"
                android:text="@string/text_agreement"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_567"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20">
                <TextView
                    android:id="@+id/register_back_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_back_app"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/color_f63c54"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_1"
                        android:layout_weight="1"
                        android:background="@color/color_50ffffff"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_50ffffff"
                        android:layout_marginLeft="@dimen/dp_23"
                        android:layout_marginRight="@dimen/dp_23"
                        android:text="@string/text_or"
                        android:textSize="@dimen/sp_19"/>
                    <View
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_1"
                        android:layout_weight="1"
                        android:background="@color/color_50ffffff"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/register_around"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:textSize="@dimen/sp_13"
                    android:textColor="@color/white"
                    android:drawablePadding="@dimen/dp_5"
                    android:drawableRight="@mipmap/icon_next"
                    android:text="@string/text_around"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_39"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
