<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/color_f5f5f5"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_phone_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/InputLayoutStyle"
        >

        <android.improving.utils.views.editinputlayout.MaterialEditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_phone"
            android:inputType="number"
            android:textColorHint="@color/color_828282"
            android:textSize="@dimen/sp_16" />
    </android.support.design.widget.TextInputLayout>


        <ImageView
            android:id="@+id/edit_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@mipmap/validate_phone_delete"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:paddingTop="13dp"
            android:visibility="gone"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_code_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/InputLayoutStyle">

        <android.improving.utils.views.editinputlayout.MaterialEditText
            android:id="@+id/edit_validate_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_validate"
            android:inputType="number"
            android:textColorHint="@color/color_828282"
            android:textSize="@dimen/sp_16" />
    </android.support.design.widget.TextInputLayout>


    <android.improving.utils.views.circleprogressbutton.CircularCountDownButton
        android:id="@+id/validate_count_down"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dp"
        android:layout_centerVertical="true"
        android:paddingTop="4dp"
        />

        <View
            android:id="@+id/validate_line"
            android:layout_width="1dp"
            android:layout_height="19dp"
            android:background="@color/color_e9e8e7"
            android:layout_toLeftOf="@+id/validate_count_down"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_centerVertical="true"
            ></View>


    </RelativeLayout>


    <Button
        style="@style/BigButtonStyle"
        android:layout_marginTop="@dimen/dp_53"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/button_next_step" />
</LinearLayout>